--- a/pages/single/index.wxml
+++ b/pages/single/index.wxml
@@ -4,7 +4,7 @@
     <block wx:for="{{background}}" wx:key="unique" wx:if="{{!item.isShow}}">
       <swiper-item>
         <view class="swiper-item">
-          <image src="{{item.imgUrl}}" mode="aspectFill"></image>
+          <image src="{{item.imgUrl}}" mode="aspectFill" lazy-load="{{true}}"></image>
         </view>
       </swiper-item>
     </block>
@@ -12,8 +12,8 @@
 </view>
 <view class="single-list">
   <view class="list" wx:for="{{list.data}}" wx:key="{{index}}">
-    <view class="fl user_icon" bindtap="goUrl" data-url="/pages/introduction/introduction?id={{item.id}}">
-      <image src="{{item.avatarUrl}}"></image>
+    <view class="fl user_icon" bindtap="goUrl" data-url="/pages/introduction/introduction?id={{item.userId}}">
+      <image src="{{item.avatarUrl}}" lazy-load="{{true}}"></image>
     </view>
     <view class="fl single-content">
       <view class="name clearfix">{{item.nickName}}
@@ -24,7 +24,7 @@
       <view class="content">{{item.description}}</view>
       <view>
         <view class="single-img {{item.singleCircleImg.length != 1?'':'single-img-one'}}" wx:for="{{item.singleCircleImg}}" wx:key="" wx:for-item="itemImg">
-          <image src="{{itemImg.url}}" mode="aspectFill" bindtap="previewImg" data-list="{{item.singleCircleImg}}" data-src="{{itemImg.url}}"></image>
+          <image src="{{itemImg.url}}" lazy-load="{{true}}" mode="aspectFill" bindtap="previewImg" data-list="{{item.singleCircleImg}}" data-src="{{itemImg.url}}"></image>
         </view>
       </view>
       <view class="address">{{item.address}}</view>
@@ -47,7 +47,7 @@
         <view class="fr icons">
           <text class="icon_share"></text>
           <text>{{item.forwardCount}}</text>
-          <button class="icons-button" open-type="share"  data-id="{{item.id}}" data-index="{{index}}" data-name="{{item.nickName}}"></button>
+          <button class="icons-button" open-type="share"  data-id="{{item.userId}}" data-index="{{index}}" data-name="{{item.nickName}}"></button>
         </view>
 
 
@@ -63,9 +63,15 @@
       </view>
     </view>
   </view>
-  <view class="no-data" wx:if="{{!list.data.length}}">
-    <image src="/images/no_data/no_list_data.png"></image>
-    <view>暂无数据</view>
+
+  <view class="loading" wx:if="{{show}}">
+    <mp-loading  type="circle" show="{{show}}" ></mp-loading>
+  </view>
+  <view wx:else>
+    <view class="no-data" wx:if="{{!list.data.length}}">
+      <image src="/images/no_data/no_list_data.png" lazy-load="{{true}}"></image>
+      <view>暂无数据</view>
+    </view>
   </view>
 
 </view>
