--- a/pages/index/couple_face/couple_face.wxss
+++ b/pages/index/couple_face/couple_face.wxss
@@ -58,7 +58,12 @@
   height: 160rpx;
   position: relative;
   display: inline-block;
-  background: #000;
+  vertical-align: top;
+}
+.upload-list image{
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 .upload-list:nth-child(4n){
   margin-right: 0;
