--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,7 @@
-<view class="home_nav">
+<!-- <view class="home_nav">
   <view class="nav_dom {{!is_match?'active':''}}" bindtap="clickNav" data-type="encounters">邂逅</view>
   <view class="nav_dom {{!is_match?'':'active'}}" bindtap="clickNav" data-type="match">匹配</view>
-</view>
+</view> -->
 
 <view wx:if="{{delect_time==0}}">
   <view wx:if="{{wrapContent}}">
@@ -43,11 +43,11 @@
     <view class="match" wx:else>
       <view class="match-box">
         <view class="match-header">
-          <view class="match_title">目前配对成功的已有<text>666000</text>对</view>
+          <view class="match_title">目前配对成功的已有<text>6666666</text>对</view>
           <view class="match_desc">个人信息越完善，认证越多，匹配越精准越快速</view>
         </view>
         <view class="match-step">
-          <view class="step" bindtap="goUrl" data-url="" data-vip="1">
+          <view class="step" bindtap="goUrl" data-url="/pages/index/list/list?url=sysMatch" data-vip="1">
             <image src="/images/match/icon_01.png"></image>
             <view class="step_desc">系统匹配</view>
           </view>
@@ -55,14 +55,15 @@
             <image src="/images/match/icon_02.png"></image>
             <view class="step_desc">夫妻脸匹配</view>
           </view>
-          <view class="step" bindtap="goUrl" data-url="/pages/index/exact_match/exact_match" data-vip="1">
+          <!-- <view class="step" bindtap="goUrl" data-url="/pages/index/exact_match/exact_match" data-vip="1"> -->
+          <view class="step" bindtap="goUrl" data-url="/pages/home/search/search" data-vip="1">
             <image src="/images/match/icon_03.png"></image>
             <view class="step_desc">精准匹配</view>
           </view>
         </view>
 
         <view class="contact">
-          <text>常见问题</text><text class="sunstring">|</text>
+          <!-- <text>常见问题</text><text class="sunstring">|</text> -->
           <button class="contact_btn" open-type="contact">联系客服</button>
         </view>
       </view>
