--- a/pages/home/search/search.wxml
+++ b/pages/home/search/search.wxml
@@ -31,18 +31,25 @@
     </picker> -->
 
     <view wx:for="{{mate.advanced}}" wx:key="index" >
-      <picker wx:if="{{item.name != 'now_residence'}}" bindchange="bindPickerChange" data-value="{{item.name}}" range="{{item.properties}}" range-key="desc" >
+      <picker wx:if="{{item.name == 'now_residence'}}" bindchange="bindPickerChangeAddress" data-value="{{item.name}}" mode="region" custom-item="全部">
         <view class="list"> 
           <text  class="fl">{{item.value}}</text>
           <text class="fr">{{info[item.name].ruleDesc?info[item.name].ruleDesc:'请选择'}}</text>
         </view>
       </picker>
-      <picker wx:else bindchange="bindPickerChangeAddress" data-value="{{item.name}}" mode="region" custom-item="全部">
+      <picker wx:elif="{{item.name == 'native_place'}}" bindchange="bindPickerChangeAddress" data-value="{{item.name}}" mode="region" custom-item="全部">
         <view class="list"> 
           <text  class="fl">{{item.value}}</text>
           <text class="fr">{{info[item.name].ruleDesc?info[item.name].ruleDesc:'请选择'}}</text>
         </view>
       </picker>
+      <picker wx:else bindchange="bindPickerChange" data-value="{{item.name}}" range="{{item.properties}}" range-key="desc" >
+        <view class="list"> 
+          <text  class="fl">{{item.value}}</text>
+          <text class="fr">{{info[item.name].ruleDesc?info[item.name].ruleDesc:'请选择'}}</text>
+        </view>
+      </picker>
+
     </view>
 
   </view>
