--- a/pages/index/list/list.wxss
+++ b/pages/index/list/list.wxss
@@ -9,6 +9,19 @@ page{
   text-align: center;
   font-size: 24rpx;
 }
+.no-data image{
+  width: 200rpx;
+  height: 220rpx;
+  display: block;
+  margin: 184rpx auto 36rpx;
+}
+.no-data view{
+  font-size:28rpx;
+  font-weight:400;
+  color:rgba(43,43,43,1);
+  line-height:40px;
+  padding-right: 20rpx;
+}
 .recommend-list{
   width: 100%;
   padding: 40rpx;
