--- a/pages/message/list/list.wxml
+++ b/pages/message/list/list.wxml
@@ -34,7 +34,7 @@
       </view>
     </view>
   </view>
-  <view class="loading" wx:if="{{show}}">
+  <view class="loading" wx:if="{{!show}}">
     <mp-loading  type="circle" show="{{show}}" ></mp-loading>
   </view>
   <view wx:else>
@@ -51,6 +51,7 @@
     <view class='toat_mainCode'>
       <text>微信号： pymt1818</text>
       <image src="/images/home/wx.png"  lazy-load="{{true}}"></image>
+      <text>电话： 03932277520</text>
     </view>
   </view>
 </view>
