--- a/pages/myself/introduction/introduction.wxss
+++ b/pages/myself/introduction/introduction.wxss
@@ -221,7 +221,6 @@ page{
 .toast_centerCode{
   position: relative;
   width: 686rpx;
-  height: 678rpx;
   border-radius:10rpx;
   background-color: rgba(255, 255, 255, 1);
   box-sizing: border-box;
@@ -232,10 +231,11 @@ page{
 }
 .toat_mainCode{
     width: 100%;
-  height: 400rpx;
-  display: flex;
+  height: 40rpx;
   font-size:28rpx;
   color: RGBA(153, 153, 153, 1);
+  margin-bottom: 40rpx;
+  text-align: center;
 }
 .toat_main{
   width: 100%;
