--- a/pages/single/release/release.wxss
+++ b/pages/single/release/release.wxss
@@ -55,18 +55,7 @@
   position: relative;
   display: inline-block;
 }
-.close{
-  position: absolute;
-  right: -15rpx;
-  top: -15rpx;
-  font-size: 30rpx;
-  color: #000;
-  width: 30rpx;
-  height: 30rpx;
-  border-radius: 50%;
-  line-height: 30rpx;
-  text-align: center;
-}
+
 .upload-list image{
   display: block;
   width: 100%;
@@ -78,6 +67,15 @@
 .upload-list-m-b{
   margin-bottom: 10rpx;
   vertical-align: top;
+}
+
+.upload-list .close{
+  position: absolute;
+  right: -15rpx;
+  top: -15rpx;
+  width: 30rpx;
+  height: 30rpx;
+  z-index: 10;
 }
 
 .add{
