--- a/pages/login/register/register.wxml
+++ b/pages/login/register/register.wxml
@@ -9,15 +9,19 @@
     <form bindsubmit="formSubmitRegister" >
       <view class="input-cell">
         <text class="input-icon icon-phone"></text>
-        <input placeholder="手机号" name="phone" type="number"></input>
-        <!-- <view class="input">{{phone}}</view> -->
-        <!-- <button class="code-btn" style="width:170rpx;height:58rpx;min-height:58rpx;"
+        <!-- <input placeholder="手机号" name="phone" type="number"></input> -->
+        <view class="input">{{phone}}</view>
+        <button class="code-btn" style="width:170rpx;height:58rpx;min-height:58rpx;"
          open-type="getPhoneNumber" 
-         bindgetphonenumber="getPhoneNumber">获取手机号</button> -->
+         bindgetphonenumber="getPhoneNumber">获取手机号</button>
       </view>
       <view class="input-cell">
         <text class="input-icon icon-password"></text>
         <input placeholder="密码" name="password" type="password"></input>
+      </view>
+      <view class="input-cell">
+        <text class="input-icon icon-password"></text>
+        <input placeholder="确认密码" name="config_password" type="password"></input>
       </view>
       <!-- <view class="input-cell">
         <input placeholder="短信验证码"></input>
@@ -25,7 +29,7 @@
       <button class="phone-btn" size="default" formType="submit">注册</button>
     </form>
     <view class="login_desc">点击一键登录/注册默认您已经同意</view>
-    <view class="login_link">《美途婚恋服务协议》</view>
+    <navigator class="login_link" url="/pages/words/agreement">《美途婚恋服务协议》</navigator> 
   </view>
 
 </view>
