--- a/pages/single/index.wxml
+++ b/pages/single/index.wxml
@@ -1,5 +1,5 @@
 
-<view class="rc_swiper">
+<view class="rc_swiper" wx:if="{{background.length}}">
   <swiper style="height:320rpx;" indicator-dots="{{true}}" indicator-color="rgba(0,0,0,0.3)" indicator-active-color="#fff" autoplay="{{true}}" interval="3000">
     <block wx:for="{{background}}" wx:key="unique" wx:if="{{!item.isShow}}">
       <swiper-item>
@@ -32,20 +32,25 @@
 
         <!-- 点赞 -->
         <view class="fl icons" bindtap="clickPraise" data-id="{{item.id}}" data-is_praise="{{item.isPraise}}">
-          <text class="icon_dianzan {{item.isPraise?'icon_dianzan_ok':''}}"></text>
+          <image class="icon_dianzan" wx:if="{{!item.isPraise}}" src="/images/single/dianzan_not.png"></image>
+          <image class="icon_dianzan" wx:else src="/images/single/dianzan_ok.png"></image>
+          <!-- <text class="icon_dianzan {{item.isPraise?'icon_dianzan_ok':''}}"></text> -->
           <text>{{item.praise}}</text>
         </view>
 
         <!-- 评论 -->
         <view class="fl icons" bindtap="clickComment" data-id="{{item.id}}" data-name="{{item.nickName}}">
-          <text class="icon_message"></text>
+          <!-- <text class="icon_message"></text> -->
+          <image class="icon_message" src="/images/single/message.png"></image>
           <text>{{item.commentCount}}</text>
         </view>
 
 
         <!-- 转发 -->
         <view class="fr icons">
-          <text class="icon_share"></text>
+          <!-- <text class="icon_share"></text> -->
+          
+          <image class="icon_share" src="/images/single/zhuanfa.png"></image>
           <text>{{item.forwardCount}}</text>
           <button class="icons-button" open-type="share"  data-id="{{item.userId}}" data-index="{{index}}" data-name="{{item.nickName}}"></button>
         </view>
